--- a/config
+++ b/config
@@ -22,8 +22,8 @@ set $menu wofi --show run | xargs swaymsg exec --
 
 ### Output configuration
 #
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ~/Pictures/7563380.jpg fill
+#wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
+#output * bg ~/Pictures/7563380.jpg fill
 #
 #HiDPI
 #
