--- a/sway/config
+++ b/sway/config
@@ -58,7 +58,10 @@ exec swayidle -w \
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
 #Touchpad:
+
 input type:touchpad {
+    events disabled_on_external_mouse
+    dwt enabled
     tap enabled
     natural_scroll enabled
 }
@@ -68,9 +71,6 @@ input * {
     xkb_layout us,ru
     xkb_options "grp:alt_shift_toggle
 }
-
-input <identifier> xkb_model "pc101"
-
 
 #NumLock
 input type:keyboard xkb_numlock enabled
