--- a/sway/config
+++ b/sway/config
@@ -31,7 +31,8 @@ output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
-###Idle configuration
+### Idle configuration
+
 #
 # Example configuration:
 #
@@ -45,6 +46,7 @@ exec swayidle -w \
 # resumed. It will also lock your screen before your computer goes to sleep.
 
 ### Input configuration
+
 #
 # Example configuration:
 #
@@ -57,7 +59,7 @@ exec swayidle -w \
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
-#Touchpad:
+# Touchpad:
 input type:touchpad {
     events disabled_on_external_mouse
     dwt enabled
@@ -71,7 +73,9 @@ input * {
     xkb_options "grp:alt_shift_toggle
 }
 
+#
 #NumLock
+#
 input type:keyboard xkb_numlock enabled
 
 ### Key bindings
@@ -212,11 +216,6 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#
-###Custom Keybings:
-#
-
-
 #Audio
 bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindsym --locked XF86AudioLowerVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
@@ -236,6 +235,6 @@ bindsym XF86AudioPrev exec playerctl previous
 bar swaybar_command waybar
 
 #Notifications
-exec dunst
+exec mako
 
 include /etc/sway/config.d/*
