--- a/sway/config
+++ b/sway/config
@@ -23,7 +23,7 @@ set $menu wofi --show run | xargs swaymsg exec --
 ### Output configuration
 #
 #wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/Pictures/winter-landscape-from-drone-1920x1080_894877-mm-90.jpg fill
 #
 #HiDPI
 #
@@ -36,16 +36,17 @@ output HDMI-A-1 resolution 1920x1080 position 1920,0
 #
 # Example configuration:
 #
+for_window [class="^mpv$"]  inhibit_idle visible
+for_window [app_id="^mpv$"] inhibit_idle visible
 exec swayidle -w \
           timeout 300 'swaylock -f -c 000000' \
           timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-          before-sleep 'swaylock -f -c 000000'
-
-default_borders pixel
-#
+          before-sleep 'swaylock -f -c 000000
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
+
+default_border pixel
 
 ### Input configuration
 
@@ -61,22 +62,20 @@ default_borders pixel
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
-#
 # Touchpad:
-#
 input type:touchpad {
     events disabled_on_external_mouse
     dwt enabled
     tap enabled
     natural_scroll enabled
 }
-#
+
 #Keymap:
-#
 input * {
     xkb_layout us,ru
     xkb_options "grp:alt_shift_toggle
 }
+
 #
 #NumLock
 #
@@ -219,31 +218,22 @@ mode "resize" {
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
-#
-# Audio
-#
+
+#Audio
 bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
 bindsym --locked XF86AudioLowerVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
 bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
 bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
-#
-# Brighness
-#
+
+#Brighness
 bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
 bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
-#
-# Player
-#
-bindsym --locked XF86AudioPlay exec playerctl play-pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
-#
-# Status Bar
-#
-bar swaybar_command waybar
-#
-# Notifications
-#
-exec mako
 
-include /etc/sway/config.d/*
+#Player
+bindsym --locked XF86AudioPlay exec playerctl play-pause
+
+# Status Bar
+bar swaybar_command waybar
+
+# Notifications
+exec dunst
