--- a/sway/config
+++ b/sway/config
@@ -24,29 +24,46 @@ set $menu wofi --show run | xargs swaymsg exec --
 #
 #wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
 output * bg ~/Pictures/winter-landscape-from-drone-1920x1080_894877-mm-90.jpg fill
+
+# Gaps
+smart_gaps on
+gaps outer 5
+gaps inner 5
+
+# Borders
+default_border pixel
+
+# Floating windows
+for_window [app_id="qalculate-gtk"] floating toggle
+for_window [app_id="thunar"] floating enable
+for_window [app_id="zathura"] floating enable
+for_window [app_id="file-roller"] floating enable
+for_window [class="firefox"] floating enable
+for_window [window_type="dialog"] floating enable
+for_window [window_role="dialog"] floating enable
+for_window [app_id="featherpad"] floating enable
+
 #
 #HiDPI
 #
 output HDMI-A-1 resolution 1920x1080 position 1920,0
+
 #
 # You can get the names of your outputs by running: swaymsg -t get_outputs
 
 ### Idle configuration
-
-#
-# Example configuration:
-#
-for_window [class="^mpv$"]  inhibit_idle visible
-for_window [app_id="^mpv$"] inhibit_idle visible
 exec swayidle -w \
           timeout 300 'swaylock -f -c 000000' \
           timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
           before-sleep 'swaylock -f -c 000000
+#
+# Example configuration:
+#
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
 # resumed. It will also lock your screen before your computer goes to sleep.
 
-default_border pixel
+
 
 ### Input configuration
 
@@ -76,9 +93,7 @@ input * {
     xkb_options "grp:alt_shift_toggle
 }
 
-#
 #NumLock
-#
 input type:keyboard xkb_numlock enabled
 
 ### Key bindings
@@ -133,17 +148,18 @@ input type:keyboard xkb_numlock enabled
 #
 # Workspaces:
 #
-    # Switch to workspace
-    bindsym $mod+1 workspace number 1
-    bindsym $mod+2 workspace number 2
-    bindsym $mod+3 workspace number 3
-    bindsym $mod+4 workspace number 4
-    bindsym $mod+5 workspace number 5
-    bindsym $mod+6 workspace number 6
-    bindsym $mod+7 workspace number 7
-    bindsym $mod+8 workspace number 8
-    bindsym $mod+9 workspace number 9
-    bindsym $mod+0 workspace number 10
+    # Switch to workspacebindsym $mod+1 workspace number 1
+    bindsym --no-repeat $mod+1 workspace number 1
+    bindsym --no-repeat $mod+2 workspace number 2
+    bindsym --no-repeat $mod+3 workspace number 3
+    bindsym --no-repeat $mod+4 workspace number 4
+    bindsym --no-repeat $mod+5 workspace number 5
+    bindsym --no-repeat $mod+6 workspace number 6
+    bindsym --no-repeat $mod+7 workspace number 7
+    bindsym --no-repeat $mod+8 workspace number 8
+    bindsym --no-repeat $mod+9 workspace number 9
+    bindsym --no-repeat $mod+0 workspace number 10
+
     # Move focused container to workspace
     bindsym $mod+Shift+1 move container to workspace number 1
     bindsym $mod+Shift+2 move container to workspace number 2
@@ -220,14 +236,14 @@ mode "resize" {
 bindsym $mod+r mode "resize"
 
 #Audio
-bindsym --locked XF86AudioRaiseVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%+
-bindsym --locked XF86AudioLowerVolume exec wpctl set-volume -l 1.5 @DEFAULT_AUDIO_SINK@ 5%-
-bindsym XF86AudioMute exec wpctl set-mute @DEFAULT_AUDIO_SINK@ toggle
+bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
+bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
+bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
 #Brighness
-bindsym --locked XF86MonBrightnessDown exec brightnessctl set 5%-
-bindsym --locked XF86MonBrightnessUp exec brightnessctl set 5%+
+bindsym XF86MonBrightnessDown exec brightnessctl set 5%- | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
+bindsym XF86MonBrightnessUp exec brightnessctl set +5% | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
 
 #Player
 bindsym --locked XF86AudioPlay exec playerctl play-pause
@@ -237,3 +253,13 @@ bar swaybar_command waybar
 
 # Notifications
 exec dunst
+
+# Power alert
+exec batsignal
+
+# Clipman
+exec wl-paste -t text --watch clipman store --no-persist
+
+# Graphical indicator bars
+set $WOBSOCK $XDG_RUNTIME_DIR/wob.sock
+exec rm -f $WOBSOCK && mkfifo $WOBSOCK && tail -f $WOBSOCK | wob
