--- a/sway/config
+++ b/sway/config
@@ -27,7 +27,7 @@ output * bg ~/Pictures/winter-landscape-from-drone-1920x1080_894877-mm-90.jpg fi
 
 # Gaps
 smart_gaps on
-gaps outer 5
+gaps outer 2
 gaps inner 5
 
 # Borders
@@ -36,13 +36,13 @@ default_border pixel
 # Floating windows
 for_window [app_id="qalculate-gtk"] floating toggle
 for_window [app_id="thunar"] floating enable
-for_window [app_id="zathura"] floating enable
-for_window [app_id="file-roller"] floating enable
-for_window [class="firefox"] floating enable
+#for_window [app_id="zathura"] floating enable
+for_window [app_id="file-roller"] floating enablee
 for_window [window_type="dialog"] floating enable
 for_window [window_role="dialog"] floating enable
 for_window [app_id="featherpad"] floating enable
-
+for_window [class="Spotify"] floating enable
+#for_window [app_id="foot"] floating enable
 #
 #HiDPI
 #
@@ -53,9 +53,11 @@ output HDMI-A-1 resolution 1920x1080 position 1920,0
 
 ### Idle configuration
 exec swayidle -w \
-          timeout 300 'swaylock -f -c 000000' \
-          timeout 600 'swaymsg "output * power off"' resume 'swaymsg "output * power on"' \
-          before-sleep 'swaylock -f -c 000000
+	timeout 300 'swaylock -f -c 000000' \
+	timeout 600 'swaymsg "output * dpms off"' \
+		resume 'swaymsg "output * dpms on"' \
+	before-sleep 'swaylock -f -c 000000'
+for_window [app_id="firefox"] inhibit_idle fullscreen
 #
 # Example configuration:
 #
@@ -235,19 +237,21 @@ mode "resize" {
 }
 bindsym $mod+r mode "resize"
 
-#Audio
+# Audio
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1| awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5% && pactl get-sink-volume @DEFAULT_SINK@ | head -n 1 | awk '{print substr($5, 1, length($5)-1)}' > $WOBSOCK
 bindsym XF86AudioMute exec pactl set-sink-mute @DEFAULT_SINK@ toggle
 bindsym XF86AudioMicMute exec wpctl set-mute @DEFAULT_AUDIO_SOURCE@ toggle
 
-#Brighness
+# Brighness
 bindsym XF86MonBrightnessDown exec brightnessctl set 5%- | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
 bindsym XF86MonBrightnessUp exec brightnessctl set +5% | sed -En 's/.*\(([0-9]+)%\).*/\1/p' > $WOBSOCK
 
-#Player
+# Player
 bindsym --locked XF86AudioPlay exec playerctl play-pause
 
+# Swaylock
+bindsym $mod+alt+L exec swaylock
 # Status Bar
 bar swaybar_command waybar
 
@@ -257,6 +261,8 @@ exec dunst
 # Clipman
 exec wl-paste -t text --watch clipman store --no-persist
 
+# Screenshoot
+bindsym Print exec slurp | grim -g - $(xdg-user-dir PICTURES)/$(date +'screenshot_%Y-%m-%d-%H%M%S.png')
 # WOB
 exec systemctl --user import-environment DISPLAY WAYLAND_DISPLAY SWAYSOCK
 
